Tweak latexila intro

--- a/report/index.tex
+++ b/report/index.tex
@@ -56,7 +56,7 @@ Il met cependant à la disposition de l'utilisateur des outils puissant qui en f
 \begin{itemize}
 	\item La compilation assistée
 	\item Une gestion de projet simplifiée
-	\item Une complétion à la saisie des commandes \LaTeX
+	\item Une aide à la saisie (sous forme de complétion) des commandes \LaTeX
 \end{itemize}
 
 \chapter{Étude pratique} % (fold)
@@ -162,7 +162,7 @@ Les choix proposés sont les labels déclarés dans les documents .tex du même 
 \label{sub:git}
 Git est le VCS\footnote{Version Control System} utilisé par la très grande majorité des projets open-source. Latexila est hébergé sur le dépôt git du projet Gnome\footnote{\url{git.gnome.org}}  et un miroir est également disponible sur Github\footnote{\url{https://github.com/GNOME/latexila}}.
 Pour ce projet, nous avons créé un \textit{fork} du dépôt principal sur Github et travaillé sur une branche annexe, régulièrement mise à jour à partir du dépôt principal.
-Un patch entre la \textbf{branche principale} et la \textbf{branche de test} est ensuite créé avec \texttt{git patch} et posté sur le bugzilla du projet\footnote{Exemple de la page de ce projet \url{https://bugzilla.gnome.org/show_bug.cgi?id=748069}}.
+Un patch entre la \textbf{branche principale} et la \textbf{branche de test} est ensuite créé avec \texttt{git patch} et posté sur le bugzilla dédié\footnote{Page de ce projet \url{https://bugzilla.gnome.org/show_bug.cgi?id=748069}}.
 
 \chapter{Conclusion}
 Le mécanisme de complétion, auparavant \textit{statique} prend désormais en charge une complétion \textit{dynamique} sur les labels déclarés par l'utilisateur.
